abstract savedArr to bars

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,10 @@
 }
 
 .App-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: white;
 }
 
 .App-nav-list {
